--- a/index.html
+++ b/index.html
@@ -10,6 +10,22 @@
     <link rel="stylesheet" href="dist/styles.min.css" />
   </head>
   <body>
+    <div class="container">
+      <div class="clock">
+        <span class="number number1"></span>
+        <span class="number number2"></span>
+        <span class="number number3"></span>
+        <span class="number number4"></span>
+        <span class="number number5"></span>
+        <span class="number number6"></span>
+        <span class="number number7"></span>
+        <span class="number number8"></span>
+        <span class="number number9"></span>
+        <span class="number number10"></span>
+        <span class="number number11"></span>
+        <span class="number number12"></span>
+      </div>
+    </div>
     <script src="app.js"></script>
   </body>
 </html>
